fix rules modal and surrender btn on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,10 @@ main {
   justify-content: space-around;
 }
 
+.rules__modal__content {
+  align-items: stretch;
+}
+
 .starter__modal__text,
 .endgame__modal__text,
 .rules__modal__text {
@@ -270,8 +274,7 @@ main {
 }
 
 .rules__modal__rule {
-  list-style: none;
-  width: 100%;
+  margin: 0 0.5em 0 1.5em;
   text-align: justify;
   padding: 0 0.6rem;
   text-transform: uppercase;
@@ -314,6 +317,11 @@ main {
     border-color 0.1s ease-in;
 }
 
+.rules__modal__button {
+  align-self: center;
+  width: 10em;
+}
+
 .starter__modal__button:hover,
 .mustCapture__modal__button:hover,
 .endgame__modal__button:hover,
@@ -348,6 +356,12 @@ main {
   .player2__timer {
     border: 0.15rem solid #000;
     padding: 0.1rem 1.3rem;
+    margin: 0 0.8rem;
+  }
+
+  .player1__name,
+  .player2__name {
+    margin: 0 0.5rem 0 0.5rem;
   }
 
   .red {
@@ -440,6 +454,16 @@ main {
     width: 100vw;
     height: 100vh;
   }
+
+  .player1__name,
+  .player2__name {
+    margin: 0 2rem 0 0.5rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    margin: 0 2rem;
+  }
 }
 
 @media only screen and (min-width: 560px) {
@@ -473,17 +497,20 @@ main {
   .rules__modal__button {
     font-size: 1.8rem;
   }
+
+  .player1__timer,
+  .player2__timer {
+    padding: 0.1rem 1.3rem;
+    margin: 0 1rem;
+  }
+
+  .player1__name,
+  .player2__name {
+    margin: 0 1rem 0 1rem;
+  }
 }
 
 @media only screen and (min-width: 736px) {
-  .starter__modal__content,
-  .mustCapture__modal__content,
-  .endgame__modal__content,
-  .rules__modal__content {
-    width: 100vw;
-    height: 80vh;
-  }
-
   :root {
     --cell-size: 1.8em;
     --font-size: 1rem;
@@ -528,6 +555,13 @@ main {
   }
 }
 
+@media only screen and (min-width: 736px) and (orientation: portrait) {
+  :root {
+    --cell-size: 3.2em;
+    --font-size: 2rem;
+  }
+}
+
 @media only screen and (min-width: 801px) {
   :root {
     --cell-size: 1.8rem;
@@ -562,12 +596,23 @@ main {
     font-size: 3.5rem;
   }
   .rules__modal__rule {
-    font-size: 1.4rem;
+    font-size: 0.9rem;
   }
 
   .rules__modal__button {
-    font-size: 2.5rem;
-    padding: 1rem 2rem;
+    font-size: 2rem;
+    padding: 0.5rem 1.4rem;
+  }
+}
+
+@media only screen and (min-width: 801px) and (orientation: portrait) {
+  :root {
+    --cell-size: 3.6em;
+    --font-size: 2rem;
+  }
+
+  .rules__modal__rule {
+    font-size: 1.4rem;
   }
 }
 
@@ -606,6 +651,39 @@ main {
   .rulesButton {
     width: calc(var(--font-size) * 2);
     height: calc(var(--font-size) * 2);
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .starter__modal__content,
+  .mustCapture__modal__content,
+  .endgame__modal__content,
+  .rules__modal__content {
+    width: 100vw;
+    height: 90vh;
+  }
+
+  .player1__name,
+  .player2__name {
+    margin: 0 2rem 0 0.5rem;
+  }
+
+  .player1__timer,
+  .player2__timer {
+    margin: 0 2rem;
+  }
+
+  .rules__modal__rule {
+    font-size: 1.3rem;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .starter__modal__content,
+  .mustCapture__modal__content,
+  .endgame__modal__content,
+  .rules__modal__content {
+    width: 100vw;
+    height: 80vh;
   }
 }
 
